--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
-    "test": "jest --watch --coverage"
+    "test": "jest --watch"
   },
   "dependencies": {
     "@next/eslint-plugin-next": "^13.4.2",
