fix: 새로운 테스트가 존재할 경우 ga가  종료되는지 실험

--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
-    "test": "jest --watch --passWithNoTests"
+    "test": "jest --passWithNoTests --watch --coverage",
+    "ci": "jest --passWithNoTests --watch --coverage --forceExit"
   },
   "dependencies": {
     "@next/eslint-plugin-next": "^13.4.2",
