--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "start": "next start",
     "lint": "next lint",
     "test": "jest --passWithNoTests --watch --coverage",
-    "ci": "jest --passWithNoTests --watch --coverage --forceExit"
+    "ci": "jest --passWithNoTests --watchAll --coverage --forceExit"
   },
   "dependencies": {
     "@next/eslint-plugin-next": "^13.4.2",
