--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -11,7 +11,7 @@ jobs:
 
     strategy:
       matrix:
-        node-version: [16.x, 18.x, 20.x]
+        node-version: [16.x, 19.x]
 
     steps:
       - uses: actions/checkout@v3
@@ -23,4 +23,4 @@ jobs:
           # registry-url: "https://registry.yarnpkg.com"
       - run: yarn install --frozen-lockfile
       - run: yarn build
-      - run: yarn ci
+      - run: yarn test
