--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@next/eslint-plugin-next": "^13.4.2",
     "@tanstack/react-query": "^4.29.7",
+    "@trivago/prettier-plugin-sort-imports": "^4.1.1",
     "@types/node": "20.1.4",
     "@types/react": "18.2.6",
     "@types/react-dom": "18.2.4",
