feat: LandingPage 구현 시작

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -27,7 +27,7 @@
     "unused-imports"
   ],
   "rules": {
-    "simple-import-sort/imports": "warn",
-    "simple-import-sort/exports": "warn"
+    "simple-import-sort/imports": "error",
+    "simple-import-sort/exports": "error"
   }
 }
