--- a/tsconfig.json
+++ b/tsconfig.json
@@ -22,8 +22,8 @@
     ],
     "paths": {
       "@/*": ["./*"]
-    },
-    "baseUrl": "./"
+    }
+    // "baseUrl": "./"
   },
   "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", ".next/types/**/*.ts"],
   "exclude": ["node_modules"]
