--- a/.babelrc.json
+++ b/.babelrc.json
@@ -1,7 +1,10 @@
 {
   "presets": [
     "next/babel",
-    ["@babel/preset-env", { "targets": { "node": "current" } }],
+    [
+      "@babel/preset-env",
+      { "targets": { "node": "current" }, "modules": false }
+    ],
     "@babel/preset-typescript"
   ]
 }
