--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -11,7 +11,10 @@
     "eslint:recommended",
     "plugin:@next/next/recommended",
     "plugin:@typescript-eslint/recommended",
-    "plugin:prettier/recommended"
+    "plugin:prettier/recommended",
+    "airbnb",
+    "airbnb/hooks",
+    "airbnb-typescript"
   ],
   "overrides": [],
   "parser": "@typescript-eslint/parser",
@@ -28,6 +31,8 @@
   ],
   "rules": {
     "simple-import-sort/imports": "error",
-    "simple-import-sort/exports": "error"
+    "simple-import-sort/exports": "error",
+    "react/react-in-jsx-scope": "off",
+    "react/jsx-props-no-spreading": "off"
   }
 }
