--- a/package.json
+++ b/package.json
@@ -7,8 +7,9 @@
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
+    "lint:fix": "eslint --fix",
     "test": "jest --coverage --transformIgnorePatterns \"node_modules/(?!swiper)/\"",
-    "local": "jest --coverage --watch --transformIgnorePatterns \"node_modules/(?!swiper)/\""
+    "test:local": "jest --coverage --watch --transformIgnorePatterns \"node_modules/(?!swiper)/\""
   },
   "dependencies": {
     "@next/eslint-plugin-next": "^13.4.2",
@@ -42,6 +43,8 @@
     "@typescript-eslint/parser": "^5.59.5",
     "babel-jest": "^29.5.0",
     "cross-env": "^7.0.3",
+    "eslint-config-airbnb": "^19.0.4",
+    "eslint-config-airbnb-typescript": "^17.0.0",
     "eslint-config-prettier": "^8.8.0",
     "eslint-plugin-prettier": "^4.2.1",
     "eslint-plugin-simple-import-sort": "^10.0.0",
